k8s_manifests/object_model/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: object_model
    app.kubernetes.io/part-of: ziak
  name: object_model
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: object_model
  template:
    metadata:
      labels:
        app.kubernetes.io/name: object_model
        app.kubernetes.io/part-of: ziak
    spec:
      containers:
      - image: object_model:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/liveness
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: object_model
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/readiness
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
