k8s_manifests/object_model/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: object_model-postgres
  name: object_model-postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: object_model-postgres
  type: ClusterIP
