k8s_manifests/object_model/postgres.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    labels:
      app: object_model-postgres
    name: object_model-postgres
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: object_model-postgres
    serviceName: object_model-postgres
    template:
      metadata:
        labels:
          app: object_model-postgres
      spec:
        containers:
        - env:
          - name: POSTGRES_DB
            value: object_model_db
          - name: POSTGRES_USER
            value: postgres
          - name: POSTGRES_PASSWORD
            value: postgres
          image: postgres:15
          name: postgres
          ports:
          - containerPort: 5432
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-storage
    volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: object_model-postgres
    name: object_model-postgres
  spec:
    ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      app: object_model-postgres
    type: ClusterIP
kind: List
