k8s_manifests/object_model/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: object_model
    app.kubernetes.io/part-of: ziak
  name: object_model
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: object_model
  type: ClusterIP
