k8s_manifests/object_model/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: '120'
  name: object_model
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: object_model
            port:
              name: http
        path: /object_model
        pathType: Prefix
